--- a/Задания с 07.09.2022/Task1/Task1.Tests/Task1.Tests.csproj
+++ b/Задания с 07.09.2022/Task1/Task1.Tests/Task1.Tests.csproj
@@ -20,4 +20,22 @@
     <ProjectReference Include="..\Task1\Task1.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Correct Case First Matrix.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Correct Case Result Matrix.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Correct Case Second Matrix.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Incorrect Case First Matrix.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Incorrect Case Second Matrix.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
